Added Tukey for boroughs

--- a/src/analysis.ipynb
+++ b/src/analysis.ipynb
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -792,31 +792,47 @@
      "output_type": "stream",
      "text": [
       "Alternative Hypothesis: dogs from Staten Island are bolder than other dogs in New York.\n",
+      "Non-Staten Island bold mean:  0.6158679075106592\n",
+      "Staten Island bold mean:  0.6406921974196191\n",
       "Ttest_indResult(statistic=4.179055462611695, pvalue=2.9695865415435128e-05)\n",
       "\n",
       "Alternative Hypothesis: dogs from Staten Island are calmer than other dogs in New York.\n",
+      "Non-Staten Island calm mean:  0.468288783207609\n",
+      "Staten Island calm mean:  0.5107515871390539\n",
       "Ttest_indResult(statistic=5.659747231215235, pvalue=1.587337284450656e-08)\n",
       "\n",
       "Alternative Hypothesis: dogs from the Bronx and Queens are less trainable than other dogs in New York.\n",
+      "Non-Bronx/Queens trainable mean:  0.4541385203874013\n",
+      "Bronx/Queens trainable mean:  0.3909318100678329\n",
       "Ttest_indResult(statistic=-18.70824232920792, pvalue=1.091825418661078e-77)\n",
       "\n",
       "Alternative Hypothesis: dogs from the Bronx and Queens are less sociable than other dogs in New York.\n",
+      "Non-Bronx/Queens sociable mean:  0.49613412549849434\n",
+      "Bronx/Queens sociable mean:  0.4488277995953826\n",
       "Ttest_indResult(statistic=10.46366006573242, pvalue=1.3923841632022199e-25)\n",
       "\n",
       "Null Hypothesis: The average boldness of dogs in Brooklyn is the same as the average boldness for other New York dogs.\n",
       "Alternative Hypothesis: The average boldness of Brooklyn and other New York dogs is different.\n",
+      "Non-Brooklyn bold mean:  0.6235702162202051\n",
+      "Brooklyn bold mean:  0.6406921974196191\n",
       "Ttest_indResult(statistic=2.856822730819771, pvalue=0.004293517055006024)\n",
       "\n",
       "Null Hypothesis: The average trainability of dogs in Brooklyn is the same as the average trainability for other New York dogs.\n",
       "Alternative Hypothesis: The average trainability of Brooklyn and other New York dogs is different.\n",
+      "Non-Brooklyn trainable mean:  0.43480185964135487\n",
+      "Brooklyn trainable mean:  0.43291839557399725\n",
       "Ttest_indResult(statistic=0.5074921030282915, pvalue=0.6118147917491854)\n",
       "\n",
       "Null Hypothesis: The average calmness of dogs in Brooklyn is the same as the average calmness for other New York dogs.\n",
       "Alternative Hypothesis: The average calmness of Brooklyn and other New York dogs is different.\n",
+      "Non-Brooklyn calm mean:  0.47981698767618625\n",
+      "Brooklyn calm mean:  0.44820962040879053\n",
       "Ttest_indResult(statistic=6.303198509306465, pvalue=2.9709015444788364e-10)\n",
       "\n",
       "Null Hypothesis: The average sociability of dogs in Brooklyn is the same as the average sociability for other New York dogs.\n",
       "Alternative Hypothesis: The average sociability of Brooklyn and other New York dogs is different.\n",
+      "Non-Brooklyn sociable mean:  0.4891643913118343\n",
+      "Brooklyn sociable mean:  0.45681573689872446\n",
       "Ttest_indResult(statistic=6.603521194608863, pvalue=4.106640832074502e-11)\n"
      ]
     }
@@ -826,28 +842,36 @@
     "non_staten = nyc_attrib[nyc_attrib['Borough'].isin(['Manhattan', 'Queens', 'Bronx', 'Brooklyn'])]\n",
     "non_staten.dropna(inplace=True)\n",
     "non_staten_bold = non_staten['Bold']\n",
+    "print('Non-Staten Island bold mean: ',non_staten_bold.mean())\n",
     "staten = nyc_attrib[nyc_attrib['Borough'] == 'Staten Island']\n",
     "staten.dropna(inplace=True)\n",
     "staten_bold = staten['Bold']\n",
+    "print('Staten Island bold mean: ',staten_bold.mean())\n",
     "print(stats.ttest_ind(staten_bold, non_staten_bold, equal_var = False))\n",
     "\n",
     "print('\\nAlternative Hypothesis: dogs from Staten Island are calmer than other dogs in New York.')\n",
     "non_staten_calm = non_staten['Calm']\n",
+    "print('Non-Staten Island calm mean: ',non_staten_calm.mean())\n",
     "staten_calm = staten['Calm']\n",
+    "print('Staten Island calm mean: ',staten_calm.mean())\n",
     "print(stats.ttest_ind(staten_calm, non_staten_calm, equal_var = False))\n",
     "\n",
     "print('\\nAlternative Hypothesis: dogs from the Bronx and Queens are less trainable than other dogs in New York.')\n",
     "non_bronxq = nyc_attrib[nyc_attrib['Borough'].isin(['Manhattan', 'Staten Island', 'Brooklyn'])]\n",
     "non_bronxq.dropna(inplace=True)\n",
     "non_bronxq_trainable = non_bronxq['Trainable']\n",
+    "print('Non-Bronx/Queens trainable mean: ',non_bronxq_trainable.mean())\n",
     "bronxq = nyc_attrib[nyc_attrib['Borough'].isin(['Queens', 'Bronx'])]\n",
     "bronxq.dropna(inplace=True)\n",
     "bronxq_trainable = bronxq['Trainable']\n",
+    "print('Bronx/Queens trainable mean: ',bronxq_trainable.mean())\n",
     "print(stats.ttest_ind(bronxq_trainable, non_bronxq_trainable, equal_var = False))\n",
     "\n",
     "print('\\nAlternative Hypothesis: dogs from the Bronx and Queens are less sociable than other dogs in New York.')\n",
     "non_bronxq_sociable = non_bronxq['Sociable']\n",
+    "print('Non-Bronx/Queens sociable mean: ',non_bronxq_sociable.mean())\n",
     "bronxq_sociable = bronxq['Sociable']\n",
+    "print('Bronx/Queens sociable mean: ',bronxq_sociable.mean())\n",
     "print(stats.ttest_ind(non_bronxq_sociable, bronxq_sociable, equal_var = False))\n",
     "\n",
     "print('\\nNull Hypothesis: The average boldness of dogs in Brooklyn is the same as the average boldness for other New York dogs.')\n",
@@ -855,28 +879,36 @@
     "non_brooklyn = nyc_attrib[nyc_attrib['Borough'].isin(['Manhattan', 'Queens', 'Bronx', 'Staten Island'])]\n",
     "non_brooklyn.dropna(inplace=True)\n",
     "non_brooklyn_bold = non_brooklyn['Bold']\n",
+    "print('Non-Brooklyn bold mean: ',non_brooklyn_bold.mean())\n",
     "brooklyn = nyc_attrib[nyc_attrib['Borough'] == 'Brooklyn']\n",
     "brooklyn.dropna(inplace=True)\n",
     "brooklyn_bold = staten['Bold']\n",
+    "print('Brooklyn bold mean: ',brooklyn_bold.mean())\n",
     "print(stats.ttest_ind(brooklyn_bold, non_brooklyn_bold, equal_var = False))\n",
     "\n",
     "print('\\nNull Hypothesis: The average trainability of dogs in Brooklyn is the same as the average trainability for other New York dogs.')\n",
     "print('Alternative Hypothesis: The average trainability of Brooklyn and other New York dogs is different.')\n",
     "non_brooklyn_trainable = non_brooklyn['Trainable']\n",
+    "print('Non-Brooklyn trainable mean: ',non_brooklyn_trainable.mean())\n",
     "brooklyn_trainable = brooklyn['Trainable']\n",
+    "print('Brooklyn trainable mean: ',brooklyn_trainable.mean())\n",
     "print(stats.ttest_ind(non_brooklyn_trainable, brooklyn_trainable, equal_var = False))\n",
     "\n",
     "print('\\nNull Hypothesis: The average calmness of dogs in Brooklyn is the same as the average calmness for other New York dogs.')\n",
     "print('Alternative Hypothesis: The average calmness of Brooklyn and other New York dogs is different.')\n",
     "non_brooklyn_calm = non_brooklyn['Calm']\n",
+    "print('Non-Brooklyn calm mean: ',non_brooklyn_calm.mean())\n",
     "brooklyn_calm = brooklyn['Calm']\n",
+    "print('Brooklyn calm mean: ',brooklyn_calm.mean())\n",
     "print(stats.ttest_ind(non_brooklyn_calm, brooklyn_calm, equal_var = False))\n",
     "\n",
     "print('\\nNull Hypothesis: The average sociability of dogs in Brooklyn is the same as the average sociability for other New York dogs.')\n",
     "print('Alternative Hypothesis: The average sociability of Brooklyn and other New York dogs is different.')\n",
     "non_brooklyn_sociable = non_brooklyn['Sociable']\n",
+    "print('Non-Brooklyn sociable mean: ',non_brooklyn_sociable.mean())\n",
     "brooklyn_sociable = brooklyn['Sociable']\n",
-    "print(stats.ttest_ind(non_brooklyn_sociable, brooklyn_sociable, equal_var = False))"
+    "print('Brooklyn sociable mean: ',brooklyn_sociable.mean())\n",
+    "print(stats.ttest_ind(non_brooklyn_sociable, brooklyn_sociable, equal_var = False))\n"
    ]
   },
   {
@@ -888,6 +920,8 @@
     "The null hypothesis is rejected in all cases, except: \n",
     "* Since the p-value is greater than 0.00625, we fail to reject the null hypothesis that dogs in Brooklyn are the same average trainability as dogs in other boroughs.\n",
     "\n",
+    "The differences in the means is still relatively small. I will explore further using a Tukey test, which examines the differences of the means.\n",
+    "\n",
     "Of note, Seattle dogs' attribute calculations include primary and secondary breeds, making it more likely that the distributions will be different than dogs from other cities."
    ]
   },
@@ -895,7 +929,145 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tukey tests"
+    "# Tukey tests - within NYC boroughs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Attribute:  Trainable\n",
+      "   Multiple Comparison of Means - Tukey HSD,FWER=0.05  \n",
+      "=======================================================\n",
+      "  group1      group2    meandiff  lower   upper  reject\n",
+      "-------------------------------------------------------\n",
+      "  Bronx      Brooklyn    0.0786   0.063   0.0941  True \n",
+      "  Bronx     Manhattan    0.1161   0.1013  0.1308  True \n",
+      "  Bronx       Queens     0.0563   0.0403  0.0723  True \n",
+      "  Bronx   Staten Island  0.0885   0.0694  0.1077  True \n",
+      " Brooklyn   Manhattan    0.0375   0.0263  0.0487  True \n",
+      " Brooklyn     Queens    -0.0223  -0.0351 -0.0095  True \n",
+      " Brooklyn Staten Island   0.01   -0.0066  0.0265 False \n",
+      "Manhattan     Queens    -0.0598  -0.0716  -0.048  True \n",
+      "Manhattan Staten Island -0.0275  -0.0434 -0.0117  True \n",
+      "  Queens  Staten Island  0.0323   0.0153  0.0492  True \n",
+      "-------------------------------------------------------\n",
+      "\n",
+      "Attribute:  Obedient\n",
+      "   Multiple Comparison of Means - Tukey HSD,FWER=0.05  \n",
+      "=======================================================\n",
+      "  group1      group2    meandiff  lower   upper  reject\n",
+      "-------------------------------------------------------\n",
+      "  Bronx      Brooklyn    0.028    0.0168  0.0392  True \n",
+      "  Bronx     Manhattan    0.0527   0.0421  0.0634  True \n",
+      "  Bronx       Queens     0.0295   0.018   0.041   True \n",
+      "  Bronx   Staten Island  0.0535   0.0397  0.0673  True \n",
+      " Brooklyn   Manhattan    0.0247   0.0168  0.0327  True \n",
+      " Brooklyn     Queens     0.0015  -0.0075  0.0106 False \n",
+      " Brooklyn Staten Island  0.0255   0.0137  0.0374  True \n",
+      "Manhattan     Queens    -0.0232  -0.0316 -0.0148  True \n",
+      "Manhattan Staten Island  0.0008  -0.0105  0.0121 False \n",
+      "  Queens  Staten Island  0.024    0.0119  0.0361  True \n",
+      "-------------------------------------------------------\n",
+      "\n",
+      "Attribute:  Bold\n",
+      "  Multiple Comparison of Means - Tukey HSD,FWER=0.05  \n",
+      "======================================================\n",
+      "  group1      group2    meandiff  lower  upper  reject\n",
+      "------------------------------------------------------\n",
+      "  Bronx      Brooklyn   -0.0038  -0.0208 0.0131 False \n",
+      "  Bronx     Manhattan    0.0219   0.0058 0.0381  True \n",
+      "  Bronx       Queens     0.0149  -0.0026 0.0323 False \n",
+      "  Bronx   Staten Island  0.0374   0.0165 0.0583  True \n",
+      " Brooklyn   Manhattan    0.0258   0.0135 0.038   True \n",
+      " Brooklyn     Queens     0.0187   0.0048 0.0326  True \n",
+      " Brooklyn Staten Island  0.0412   0.0232 0.0593  True \n",
+      "Manhattan     Queens     -0.007  -0.0199 0.0058 False \n",
+      "Manhattan Staten Island  0.0155  -0.0018 0.0327 False \n",
+      "  Queens  Staten Island  0.0225   0.004  0.041   True \n",
+      "------------------------------------------------------\n",
+      "\n",
+      "Attribute:  Calm\n",
+      "   Multiple Comparison of Means - Tukey HSD,FWER=0.05  \n",
+      "=======================================================\n",
+      "  group1      group2    meandiff  lower   upper  reject\n",
+      "-------------------------------------------------------\n",
+      "  Bronx      Brooklyn    0.0462   0.0248  0.0676  True \n",
+      "  Bronx     Manhattan    0.104    0.0837  0.1244  True \n",
+      "  Bronx       Queens     0.0619   0.0399  0.0839  True \n",
+      "  Bronx   Staten Island  0.1091   0.0828  0.1355  True \n",
+      " Brooklyn   Manhattan    0.0578   0.0424  0.0732  True \n",
+      " Brooklyn     Queens     0.0157  -0.0019  0.0332 False \n",
+      " Brooklyn Staten Island  0.0629   0.0401  0.0857  True \n",
+      "Manhattan     Queens    -0.0421  -0.0584 -0.0259  True \n",
+      "Manhattan Staten Island  0.0051  -0.0167  0.0268 False \n",
+      "  Queens  Staten Island  0.0472   0.0239  0.0706  True \n",
+      "-------------------------------------------------------\n",
+      "\n",
+      "Attribute:  Sociable\n",
+      "   Multiple Comparison of Means - Tukey HSD,FWER=0.05  \n",
+      "=======================================================\n",
+      "  group1      group2    meandiff  lower   upper  reject\n",
+      "-------------------------------------------------------\n",
+      "  Bronx      Brooklyn    0.0524   0.0315  0.0732  True \n",
+      "  Bronx     Manhattan    0.1146   0.0948  0.1344  True \n",
+      "  Bronx       Queens     0.0681   0.0467  0.0895  True \n",
+      "  Bronx   Staten Island  0.1093   0.0837  0.135   True \n",
+      " Brooklyn   Manhattan    0.0622   0.0472  0.0772  True \n",
+      " Brooklyn     Queens     0.0158  -0.0013  0.0328 False \n",
+      " Brooklyn Staten Island  0.057    0.0348  0.0792  True \n",
+      "Manhattan     Queens    -0.0464  -0.0623 -0.0306  True \n",
+      "Manhattan Staten Island -0.0052  -0.0264  0.016  False \n",
+      "  Queens  Staten Island  0.0412   0.0185  0.0639  True \n",
+      "-------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in lst:\n",
+    "    print('\\nAttribute: ',item)\n",
+    "    manhattan_item = pd.DataFrame(nyc_attrib[nyc_attrib['Borough'] == 'Manhattan'][item])\n",
+    "    manhattan_item['Borough'] = 'Manhattan'\n",
+    "    brooklyn_item = pd.DataFrame(nyc_attrib[nyc_attrib['Borough'] == 'Brooklyn'][item])\n",
+    "    brooklyn_item['Borough'] = 'Brooklyn'\n",
+    "    bronx_item = pd.DataFrame(nyc_attrib[nyc_attrib['Borough'] == 'Bronx'][item])\n",
+    "    bronx_item['Borough'] = 'Bronx'\n",
+    "    staten_item = pd.DataFrame(nyc_attrib[nyc_attrib['Borough'] == 'Staten Island'][item])\n",
+    "    staten_item['Borough'] = 'Staten Island'\n",
+    "    queens_item = pd.DataFrame(nyc_attrib[nyc_attrib['Borough'] == 'Queens'][item])\n",
+    "    queens_item['Borough'] = 'Queens'\n",
+    "    item_attrib = pd.concat([manhattan_item, brooklyn_item, bronx_item, staten_item, queens_item])\n",
+    "    item_attrib.dropna(inplace=True)\n",
+    "    item_attrib.reset_index(inplace=True)\n",
+    "\n",
+    "    m = MultiComparison(item_attrib[item], item_attrib['Borough'])\n",
+    "    tukey = m.tukeyhsd()\n",
+    "    print(tukey.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Selected findings from Tukey tests\n",
+    "There is a statistically significant relationship in most cases, but the mean difference is often small.\n",
+    "* Manhattan dogs are more trainable than Bronx dogs.\n",
+    "* Differences in the boldness among NYC dogs are minimal.\n",
+    "* Differences in the obedience among NYC dogs are also minimal, though most pronounced between Staten Island and Manhattan vs. Bronx dogs.\n",
+    "* Staten Island and Manhattan dogs are more sociable and calm than Bronx dogs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tukey tests - between cities"
    ]
   },
   {
@@ -1365,6 +1537,13 @@
     "\n",
     "print('\\nIreland breeds:')\n",
     "print(wiki[wiki['Origin'].str.contains(\"Ireland\")]['Breed'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hypothesis testing"
    ]
   },
   {
