--- a/src/analysis.ipynb
+++ b/src/analysis.ipynb
@@ -3494,9 +3494,7 @@
     "The null hypothesis is rejected in all cases, except: \n",
     "* Since the p-value is greater than 0.00625, we fail to reject the null hypothesis that dogs in Brooklyn are the same average trainability as dogs in other boroughs.\n",
     "\n",
-    "The differences in the means is still relatively small. I will explore further using a Tukey test, which examines the differences of the means.\n",
-    "\n",
-    "Of note, Seattle dogs' attribute calculations include primary and secondary breeds, making it more likely that the distributions will be different than dogs from other cities."
+    "The differences in the means is still relatively small. I will explore further using a Tukey test, which examines the differences of the means."
    ]
   },
   {
