update akc analysis

--- a/src/countrywide-akc-analysis.ipynb
+++ b/src/countrywide-akc-analysis.ipynb
@@ -50,10 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# load each csv and create a data frame\n",
     "def load_news_data():\n",
     "    \"\"\"\n",
     "    A function to load data from data folder\n",
@@ -67,8 +68,15 @@
     "    df_full = pd.concat(file_list, join='outer').drop_duplicates().reset_index().drop(columns='index')\n",
     "    return df_full\n",
     "\n",
+    "# drop NAs\n",
     "akc_full = load_news_data().drop(columns=\"Ranking\").dropna()\n",
-    "akc_full = akc_full[akc_full.Breed != 'Grand Total']"
+    "\n",
+    "# isolate the total dogs in each city\n",
+    "akc_grand_total = akc_full[akc_full.Breed == 'Grand Total'][['City','Reg Count']].rename(columns = {'Reg Count': 'Total'})\n",
+    "akc_full = akc_full[akc_full.Breed != 'Grand Total'].merge(akc_grand_total, on = 'City')\n",
+    "\n",
+    "# normalize the count by the total number of registered dogs\n",
+    "akc_full['% of Total']= akc_full['Reg Count']/akc_full['Total']"
    ]
   },
   {
@@ -80,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,34 +105,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Checking breeds to determine replacements"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for breed in attrib.Breed:\n",
-    "    if breed.find('Fox Terrier') != -1:\n",
-    "        print(breed)\n",
-    "print('___________')\n",
-    "for breed in akc_full.Breed:\n",
-    "    if breed.find('Terriers') != -1:\n",
-    "        print(breed)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Replace breed names in AKC data to match those in attribute data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,30 +146,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "akc_attrib = akc_full.set_index('Breed').join(attrib.set_index('Breed'), how='left').reset_index()"
+    "akc_attrib = akc_full.set_index('Breed').join(attrib.set_index('Breed'), how='left').reset_index()\n",
+    "for a in ['Obedient', 'Trainable', 'Bold', 'Calm', 'Sociable']:\n",
+    "    akc_attrib[a]=(akc_attrib[a]*akc_attrib['% of Total'])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Print average attribute per city"
+    "## Highest and lowest cities for each trait"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 70,
    "metadata": {
     "scrolled": false
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " \n",
+      " Most Obedient Cities\n",
+      "                        City  Obedient\n",
+      "58          San Fran Mission      0.62\n",
+      "65                Seattle WA      0.62\n",
+      "60             San Fran Nopa      0.61\n",
+      "61  San Fran Pacific Heights      0.61\n",
+      "2                  Austin TX      0.60\n",
+      "\n",
+      " \n",
+      " Most Trainable Cities\n",
+      "                      City  Trainable\n",
+      "58        San Fran Mission       0.57\n",
+      "26       NY Astoria Queens       0.53\n",
+      "32  NY Park Slope Brooklyn       0.53\n",
+      "34              NY Tribeca       0.50\n",
+      "66                Tampa FL       0.50\n",
+      "\n",
+      " \n",
+      " Most Bold Cities\n",
+      "                        City  Bold\n",
+      "30            NY Murray Hill  0.64\n",
+      "59         San Fran Nob Hill  0.61\n",
+      "61  San Fran Pacific Heights  0.59\n",
+      "11                 Dallas TX  0.58\n",
+      "23            Los Angeles CA  0.57\n",
+      "\n",
+      " \n",
+      " Most Calm Cities\n",
+      "                        City  Calm\n",
+      "59         San Fran Nob Hill  0.61\n",
+      "61  San Fran Pacific Heights  0.59\n",
+      "11                 Dallas TX  0.58\n",
+      "30            NY Murray Hill  0.57\n",
+      "29     NY Financial District  0.56\n",
+      "\n",
+      " \n",
+      " Most Sociable Cities\n",
+      "                        City  Sociable\n",
+      "58          San Fran Mission      0.62\n",
+      "59         San Fran Nob Hill      0.61\n",
+      "30            NY Murray Hill      0.60\n",
+      "61  San Fran Pacific Heights      0.60\n",
+      "11                 Dallas TX      0.58\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_attrib_per_city = akc_attrib[['Breed', 'City', 'Obedient', 'Trainable', 'Bold', 'Calm', 'Sociable']].groupby('City').sum().round(decimals=2).dropna()\n",
+    "for a in ['Obedient', 'Trainable', 'Bold', 'Calm', 'Sociable']:\n",
+    "    print('\\n \\n Most', a, 'Cities')\n",
+    "    print(total_attrib_per_city.reset_index()[['City', a]].nlargest(5, [a]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " \n",
+      " Least Obedient Cities\n",
+      "                        City  Obedient\n",
+      "38  NY Williamsburg Brooklyn      0.45\n",
+      "23            Los Angeles CA      0.46\n",
+      "13                Detroit MI      0.47\n",
+      "21              Las Vegas NV      0.47\n",
+      "28           NY East Village      0.47\n",
+      "\n",
+      " \n",
+      " Least Trainable Cities\n",
+      "                        City  Trainable\n",
+      "28           NY East Village       0.32\n",
+      "13                Detroit MI       0.36\n",
+      "59         San Fran Nob Hill       0.36\n",
+      "63             San Fran Soma       0.36\n",
+      "38  NY Williamsburg Brooklyn       0.37\n",
+      "\n",
+      " \n",
+      " Least Bold Cities\n",
+      "                 City  Bold\n",
+      "0           Albany NY  0.31\n",
+      "62  San Fran Portrero  0.31\n",
+      "18    Indianapolis IN  0.36\n",
+      "13         Detroit MI  0.37\n",
+      "27         NY Chelsea  0.40\n",
+      "\n",
+      " \n",
+      " Least Calm Cities\n",
+      "               City  Calm\n",
+      "0         Albany NY  0.31\n",
+      "13       Detroit MI  0.34\n",
+      "18  Indianapolis IN  0.35\n",
+      "27       NY Chelsea  0.38\n",
+      "34       NY Tribeca  0.38\n",
+      "\n",
+      " \n",
+      " Least Sociable Cities\n",
+      "                 City  Sociable\n",
+      "0           Albany NY      0.33\n",
+      "13         Detroit MI      0.34\n",
+      "18    Indianapolis IN      0.36\n",
+      "62  San Fran Portrero      0.38\n",
+      "3        Baltimore MD      0.41\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a in ['Obedient', 'Trainable', 'Bold', 'Calm', 'Sociable']:\n",
+    "    print('\\n \\n Least', a, 'Cities')\n",
+    "    print(total_attrib_per_city.reset_index()[['City', a]].nsmallest(5, [a]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Breeds for each city"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "mean_attrib_per_city = akc_attrib[['Breed', 'City', 'Obedient', 'Trainable', 'Bold', 'Calm', 'Sociable']].groupby('City').mean().round(decimals=2).dropna()\n",
-    "total_breed_per_city = akc_attrib[['Breed', 'City', 'Reg Count']].groupby(['Breed','City']).sum().round(decimals=2).reset_index()"
+    "total_breed_per_city = akc_attrib[['Breed', 'City', 'Reg Count','% of Total']]"
    ]
   },
   {
@@ -195,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,21 +324,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Add coordinates to data set"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
-    "attribs_coord = mean_attrib_per_city.merge(coords, on = 'City')\n",
-    "attribs_coords = attribs_coord.melt(id_vars=['City', 'lat', 'lon'], var_name = ['Attribute'], value_name = 'Average')\n",
+    "attribs_coord = total_attrib_per_city.merge(coords, on = 'City')\n",
+    "attribs_coords = attribs_coord.melt(id_vars=['City', 'lat', 'lon'], var_name = ['Attribute'], value_name = 'Total')\n",
     "attribs_coords.to_csv('../dogdata/attribs_coords.csv')\n",
     "breeds_coords = total_breed_per_city.merge(coords, on = 'City')\n",
     "breeds_coords.to_csv('../dogdata/breeds_coords.csv')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plot breed counts per city"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 82,
    "metadata": {
     "scrolled": false
    },
@@ -253,12 +388,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6f00894ff904e77aef94896cc110f33",
+       "model_id": "8fa0293c0d1649e485a46e5450972fd2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='Breed:', index=19, options=('Affenpinscher', 'Afghan Hound…"
+       "VBox(children=(HBox(children=(Dropdown(description='Breed:', index=20, options=('Affenpinscher', 'Afghan Hound…"
       ]
      },
      "metadata": {},
@@ -327,8 +462,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plot attribute scores per city"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 89,
    "metadata": {
     "scrolled": false
    },
@@ -336,7 +478,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92fef5954708481fbb47f22ab42d184c",
+       "model_id": "7d6bd7c7449f41d4abf2cbb000f11150",
        "version_major": 2,
        "version_minor": 0
       },
@@ -361,13 +503,13 @@
     "    lat = data.lat, \n",
     "    lon = data.lon,\n",
     "    hoverinfo = 'text',\n",
-    "    text = ['{} Score: {}'.format(*i) for i in zip(data['City'], data['Average'].astype('float'))], \n",
+    "    text = ['{} Score: {}'.format(*i) for i in zip(data['City'], data['Total'].astype('float'))], \n",
     "    mode = 'markers', \n",
     "    marker = dict(\n",
     "        size = 8,\n",
     "        opacity = 0.8,\n",
     "        symbol = 'circle',\n",
-    "        color = data['Average'],\n",
+    "        color = data['Total'],\n",
     "        colorscale = 'viridis',\n",
     "        colorbar_title=\"Score\")))\n",
     "\n",
@@ -393,8 +535,8 @@
     "    with attributemap.batch_update():\n",
     "        attributemap.data[0]['lat'] = data.lat\n",
     "        attributemap.data[0]['lon'] = data.lon\n",
-    "        attributemap.data[0]['text'] = ['{} Score: {}'.format(*i) for i in zip(data['City'], data['Average'].astype('float'))]\n",
-    "        attributemap.data[0]['marker']['color'] = data['Average']\n",
+    "        attributemap.data[0]['text'] = ['{} Score: {}'.format(*i) for i in zip(data['City'], data['Total'].astype('float'))]\n",
+    "        attributemap.data[0]['marker']['color'] = data['Total']\n",
     "\n",
     "\n",
     "attrib_selection.observe(response, \"value\")\n",
@@ -412,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 84,
    "metadata": {
     "scrolled": false
    },
@@ -420,12 +562,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "10817b3d46c540e6893db71c375a9cf1",
+       "model_id": "c021b4d763db454fa48104235c8a7873",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='City:', index=51, options=('Atlanta GA', 'Austin TX', 'Bal…"
+       "VBox(children=(HBox(children=(Dropdown(description='City:', index=38, options=('Austin TX', 'New York City NY …"
       ]
      },
      "metadata": {},
@@ -438,7 +580,7 @@
     "    value='Washington DC',\n",
     "    description='City:',\n",
     ")\n",
-    "data_a = mean_attrib_per_city.reset_index()[mean_attrib_per_city.reset_index()['City'] == city_selection.value]\n",
+    "data_a = total_attrib_per_city.reset_index()[total_attrib_per_city.reset_index()['City'] == city_selection.value]\n",
     "\n",
     "city_attrib = go.FigureWidget(data=[go.Table(header = dict(values = list(data_a.columns),\n",
     "                                              fill_color='lightskyblue'), \n",
@@ -469,6 +611,13 @@
     "container = widgets.HBox([city_selection])\n",
     "widgets.VBox([container, city_breed, city_attrib])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -2585,13 +2734,15 @@
           "dtype": "float64",
           "shape": [
            49
-          ]
+          ],
+          "value": {}
          },
          "lon": {
           "dtype": "float64",
           "shape": [
            49
-          ]
+          ],
+          "value": {}
          },
          "marker": {
           "color": [
@@ -3841,20 +3992,23 @@
           "dtype": "float64",
           "shape": [
            69
-          ]
+          ],
+          "value": {}
          },
          "lon": {
           "dtype": "float64",
           "shape": [
            69
-          ]
+          ],
+          "value": {}
          },
          "marker": {
           "color": {
            "dtype": "float64",
            "shape": [
             69
-           ]
+           ],
+           "value": {}
           },
           "colorbar": {
            "title": {
